k8s-manifests/portal-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
      - name: portal
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: portal-html
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: default
spec:
  selector:
    app: portal
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
